classDiagram
direction LR
class ConveyorBuilder {
    -SplineComputer splineComputer
    -SplineMesh splineMesh
    +ConveyorBuilder(SplineComputer splineComputer, SplineMesh splineMesh)
    +BuildConveyor(BoardData boardData, PathData pathData, Transform boardRoot, float cornerRadius = 0.7f) void
    -CreateRoundedPoints(BoardData board, PathData path, Transform root, float radius) SplinePoint[]$
    -CreatePoint(Transform root, Vector3 localPosition) SplinePoint$
    -MergeStraightSegments(List~Vector3~ cells, bool closed) List~Vector3~$
    -Validate(BoardData boardData, PathData pathData, Transform boardRoot) void
}
class ConveyorBuoyGroup {
    -List~Buoy~ buoys
    +IReadOnlyList~Buoy~ Buoys
    ~double Percent
    ~bool Moving
    ~bool IsLoaded
    ~bool IsReceiving
    ~BuoyStackHolder DepartureHolder
    ~StackQueueExit DepartureExit
    +float DetectionRadius
    -SphereCollider detectionCollider
    -Rigidbody body
    -Update() void
    +HasColor(int colorCode) bool
    ~TakeTop() Buoy
    -float spacing
    -Vector3 travelDirection
    -Vector3 travelUp
    ~SetTravelDirection(Vector3 direction, Vector3 up) void
    +Initialize(double percent, float spacing) void
    +GetSlotPosition(int slot) Vector3
    +Receive(Buoy buoy, int slot) void
    +Clear() void
    -OnDestroy() void
}
MonoBehaviour <|-- ConveyorBuoyGroup
class ConveyorController {
    -SplineComputer splineComputer
    -SplineMesh splineMesh
    -int WaterSpeedId$
    -MaterialPropertyBlock waterProperties
    +SetWaterSpeed(float speed) void
    -float moveSpeed
    -float rootYOffset
    -bool paused
    +Action~ConveyorBuoyGroup~ ReachedEnd
    -int maxBuoyInConveyor
    +int CurrentGroupCount
    +int MaxBuoyInConveyor
    +Action~int_int~ GroupCountChanged
    +SetGroupCapacity(int maximum) void
    -NotifyGroupCount() void
    +SetPaused(bool value) void
    +Configure(SplineComputer computer, SplineMesh mesh) void
    +SetMotionSettings(float speed, float yOffset) void
    +float MoveSpeed
    -List~ConveyorBuoyGroup~ groups
    -BoardData board
    -Transform root
    -bool closed
    -float length
    -float cornerRadius
    +ConfigureCorners(float radius) void
    -ConveyorBuilder conveyorBuilder
    -List~PathMoveSlot~ _pathMoveSlots
    -List~EnterRequest~ waiting
    -List~GroupPosition~ positions
    -float slotSpacing
    -float groupGap
    ~DetachGroup(ConveyorBuoyGroup group) void
    ~RemoveGroup(ConveyorBuoyGroup group) void
    +ConfigurePathSlots(float spacing, float minimumGap) void
    +RequestEntry(Vector2Int outletCell, float spacing, Func~Vector3_float~ estimateArrival, Action~ConveyorBuoyGroup~ accepted) void
    +RequestQueueEntry(float spacing, Func~Vector3_float~ estimateArrival, Action~ConveyorBuoyGroup~ accepted) void
    -ProcessEntries() void
    +CanReceiveFirst(ConveyorBuoyGroup group) bool
    +GetEntryHoldingOffset() Vector3
    -EntryDistance(float a, float b) float
    -PercentAt(float distance) double
    -PlaceGroup(GroupPosition position) void
    -Update() void
    +ClearGroups() void
    -OnDestroy() void
    +InitConveyor(BoardData boardData, PathData pathData, Transform boardRoot) void
}
MonoBehaviour <|-- ConveyorController
class PathMoveSlot {
    +float Distance
    +double Percent
}
class GroupPosition {
    +ConveyorBuoyGroup Group
    +float Distance, Step
    +bool EndNotified
}
class EnterRequest {
    +float Distance, Spacing
    +Func~Vector3_float~ EstimateArrival
    +Action~ConveyorBuoyGroup~ Accepted
}
class MaxBuoyCounterTxt {
    -TMP_Text counterText
    -float heightOffset
    +float HeightOffset
    -ConveyorController conveyor
    +ValidateSetup() void
    +Bind(ConveyorController controller) void
    -Refresh(int current, int maximum) void
    -Unbind() void
    +Release() void
    -OnDestroy() void
}
MonoBehaviour <|-- MaxBuoyCounterTxt
ConveyorController *-- ConveyorBuilder
ConveyorController *-- ConveyorBuoyGroup
ConveyorController *-- PathMoveSlot
ConveyorController *-- GroupPosition
ConveyorController *-- EnterRequest
MaxBuoyCounterTxt --> ConveyorController : GroupCountChanged
